--- a/index.html
+++ b/index.html
@@ -10,13 +10,82 @@
 <body>
     <div class="container">
 
-        <div class="default">
-            <img class="vista" src="img/1.webp" alt="">
-            <img class="nascosta" src="img/1b.webp" alt="">
+    <div class="card">
+        <img class="on" src="img/1.webp" alt="">
+        <img class="off" src="img/1b.webp" alt="">
+        <div class="sconto">-50%</div>
+        <div class="sostenibilità">Sostenibilità</div>
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Levi's</div>
+        <div class="scritta"><strong>RELAXED FIT TEE UNISEX</strong></div>
+        <div class="scritta scritta-2"><strong>14.99€</strong>
+        <span id="scritta-3">29.99€</span>
         </div>
-        
-        
-
     </div>
+
+    <div class="card">
+        <img class="on" src="img/2.webp" alt="">
+        <img class="off" src="img/2b.webp" alt="">
+        <div class="sconto">-30%</div>
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Guess</div>
+        <div class="scritta"><strong>ROSES TEE</strong></div>
+        <div class="scritta scritta-2"><strong>20.99€</strong>
+        <span id="scritta-3">29.99€</span>
+        </div>
+    </div>
+
+    <div class="card">
+        <img class="on" src="img/3.webp" alt="">
+        <img class="off" src="img/3b.webp" alt="">
+        <div class="sconto">-30%</div>
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Come Zucchero Filato</div>
+        <div class="scritta"><strong>VOGLIA DI COLORI PASTELLO</strong></div>
+        <div class="scritta scritta-2"><strong>129.99€</strong>
+        </div>
+    </div>
+
+    <div class="card">
+        <img class="on" src="img/4.webp" alt="">
+        <img class="off" src="img/4b.webp" alt="">
+        <div class="sconto">-50%</div>
+        <div class="sostenibilità">Sostenibilità</div>
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Levi's</div>
+        <div class="scritta"><strong>TEE UNISEX</strong></div>
+        <div class="scritta scritta-2"><strong>14.99€</strong>
+        <span id="scritta-3">29.99€</span>
+        </div>
+    </div>
+
+    <div class="card">
+        <img class="on" src="img/5.webp" alt="">
+        <img class="off" src="img/5b.webp" alt="">
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Levi's</div>
+        <div class="scritta"><strong>Maya Deluxe</strong></div>
+        <div class="scritta scritta-2"><strong>99.99€</strong>
+        </div>
+    </div>
+
+    <div class="card">
+        <img class="on" src="img/6.webp" alt="">
+        <img class="off" src="img/6b.webp" alt="">
+        <div class="sostenibilita">Sostenibilità</div>
+        <div class="cuore">&hearts;</div>
+        <div class="scritta scritta-1">Esprit</div>
+        <div class="scritta"><strong>MAGLIONE-BLACK</strong></div>
+        <div class="scritta scritta-2"><strong>29.99€</strong>
+        </div>
+    </div>
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
